<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Photo Paper</string>

    <!-- Settings -->
    <string name="current_photo">Current Photo</string>
    <string name="no_current_photo">No current photo</string>
    <string name="next_photo">Next Photo</string>
    <string name="next_unlock">after next unlock</string>
    <string name="remaining_photos">photos remain\nClick to set the next photo now</string>
    <string name="disabled">Disabled</string>
    <string name="enable_below">You must enable Photo Paper before wallpapers will be set</string>
    <string name="no_photos_remaining">No Photos Remaining</string>
    <string name="select_different_feature_or_categories">Select a different feature or categories</string>
    <string name="loading">Loading...</string>
    <string name="set">Set</string>
    <string name="settings_500px">500px Settings</string>
    <string name="login_with_500px">Login with 500px</string>
    <string name="login_with_500px_summary">Click to login</string>
    <string name="favorite_gallery">Favorite Gallery</string>
    <string name="favorite_gallery_summary">Select the gallery to use for favorites</string>
    <string name="gallery_fetch_error">Error</string>
    <string name="gallery_fetch_error_message">There was an error retrieving your galleries. Please try again later.</string>
    <string name="click_to_logout">Click to logout</string>
    <string name="feature">Feature</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="enable">Enabled</string>
    <string name="enable_summary">Enable Photo Paper to change your wallpaper at the specified interval</string>
    <string name="update_only_over_wifi">Update Only Over Wi-Fi</string>
    <string name="update_only_over_wifi_summary">Only download images using Wi-Fi</string>
    <string name="update_interval">Update Interval</string>
    <string name="parallax">Scroll Wallpaper</string>
    <string name="parallax_summary">Scroll wallpaper when swiping through home screens</string>
    <string name="clear_cache_title">Clear Cached Photos</string>
    <string name="clear_cache_summary">Click to clear all downloaded photos</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_message">Clearing the cache will remove all images and history from your device.</string>
    <string name="rate_app">Rate Photo Paper</string>
    <string name="help">Help</string>
    <string name="contact">Contact Developer</string>
    <string name="contact_summary">If you are having problems, click here to contact the developer</string>
    <string name="version">Version</string>
    <string name="trademark">Trademark</string>
    <string name="trademark_summary">This product uses the 500px API but is not endorsed or certified by 500px</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_summary">No data or information is collected from users of this app. Contacting the developer will include log output of this app, no personal or identifiable information is contained in the log.</string>
    <string name="login_error">Login Error</string>
    <string name="login_error_message">There was an error logging in to 500px.</string>
    <string name="share">Share Photo</string>

    <!-- Log Reporting -->
    <string name="send_email_via">Send email via</string>

    <!-- Recent Photos -->
    <string name="recent_photos">Recent Photos</string>
    <string name="open_in_500px">Open in 500px</string>

    <!-- Search -->
    <string name="save">Save</string>
    <string name="no_results_found">No results found</string>

    <!-- Features -->
    <string name="your_favorites">Your Favorites</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="editors_choice">Editor\'s Choice</string>
    <string name="fresh_today">Fresh Today</string>
    <string name="fresh_yesterday">Fresh Yesterday</string>
    <string name="fresh_this_week">Fresh This Week</string>

    <!-- Intervals -->
    <string name="one_minute">1 minute</string>
    <string name="two_minutes">2 minutes</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="three_hours">3 hours</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twenty_four_hours">24 hours</string>

    <!-- Categories -->
    <string name="uncategorized">Uncategorized</string>
    <string name="celebrities">Celebrities</string>
    <string name="film">Film</string>
    <string name="journalism">Journalism</string>
    <string name="nude">Nude</string>
    <string name="black_and_white">Black and White</string>
    <string name="still_life">Still Life</string>
    <string name="people">People</string>
    <string name="landscapes">Landscapes</string>
    <string name="city_and_architecture">City and Architecture</string>
    <string name="abstract_category">Abstract</string>
    <string name="animals">Animals</string>
    <string name="macro">Macro</string>
    <string name="travel">Travel</string>
    <string name="fashion">Fashion</string>
    <string name="commercial">Commercial</string>
    <string name="concert">Concert</string>
    <string name="sport">Sport</string>
    <string name="nature">Nature</string>
    <string name="performing_arts">Performing Arts</string>
    <string name="family">Family</string>
    <string name="street">Street</string>
    <string name="underwater">Underwater</string>
    <string name="food">Food</string>
    <string name="fine_art">Fine Art</string>
    <string name="wedding">Wedding</string>
    <string name="transportation">Transportation</string>
    <string name="urban_exploration">Urban Exploration</string>
</resources>
