<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/current_photo">

       <Preference
           android:key="current_photo">
               <intent android:targetPackage="com.lukekorth.photo_paper"
                   android:targetClass="com.lukekorth.photo_paper.RecentPhotosActivity" />
       </Preference>

       <Preference
           android:key="next_photo" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_500px">

        <Preference
            android:key="login"
            android:title="@string/login_with_500px"
            android:summary="@string/login_with_500px_summary" />

        <com.lukekorth.photo_paper.views.FavoriteGalleryPreference
            android:key="favorite_gallery"
            android:title="@string/favorite_gallery"
            android:enabled="false"/>

        <com.lukekorth.photo_paper.views.FeatureListPreference
            android:key="feature"
            android:title="@string/feature" />

        <MultiSelectListPreference
            android:key="categories"
            android:title="@string/categories"
            android:entries="@array/categories"
            android:entryValues="@array/category_index" />

    </PreferenceCategory>

    <PreferenceCategory android:key="settings" android:title="@string/settings">

        <CheckBoxPreference
            android:key="enable"
            android:title="@string/enable"
            android:summary="@string/enable_summary"
            android:defaultValue="false"
            android:widgetLayout="@layout/preference_switch_layout" />

        <CheckBoxPreference
            android:key="use_only_wifi"
            android:title="@string/update_only_over_wifi"
            android:summary="@string/update_only_over_wifi_summary"
            android:defaultValue="true"
            android:widgetLayout="@layout/preference_switch_layout" />

        <ListPreference
            android:key="update_interval"
            android:title="@string/update_interval"
            android:entries="@array/intervals"
            android:entryValues="@array/interval_index"
            android:defaultValue="3600" />

        <CheckBoxPreference
            android:key="use_parallax"
            android:title="@string/parallax"
            android:summary="@string/parallax_summary"
            android:widgetLayout="@layout/preference_switch_layout" />

        <Preference
            android:key="clear_cache"
            android:title="@string/clear_cache_title"
            android:summary="@string/clear_cache_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help">

        <Preference
            android:key="contact"
            android:title="@string/contact"
            android:summary="@string/contact_summary" />

        <Preference
            android:key="version"
            android:title="@string/version" />

        <Preference
            android:title="@string/trademark"
            android:summary="@string/trademark_summary" />

        <Preference
            android:title="@string/privacy"
            android:summary="@string/privacy_summary" />

    </PreferenceCategory>

</PreferenceScreen>
